finished all stories

--- a/awty/app/src/main/res/layout/activity_preference.xml
+++ b/awty/app/src/main/res/layout/activity_preference.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".PreferenceActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,12 +20,13 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:hint="eg. (425) 555-1212"
-            android:inputType="phone"/>
+            android:inputType="number"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="How many minutes between each nag?"
-            android:textSize="20dp"/>
+            android:textSize="20dp"
+            android:inputType="number"/>
         <EditText
             android:id="@+id/Minutes"
             android:layout_width="wrap_content"
@@ -40,5 +41,4 @@
             android:text="Start"/>
 
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
